tests/suite/snapshots/suite__analyze__defined_twice_identical.snap
---
source: tests/suite/analyze.rs
assertion_line: 437
expression: copy_propagation
---

     defined_twice_identical

+--------------+     +------------+
| fallthrough: |     |   enter:   |
| {}           |     | {}         |
| mov _a, _b   |     | cmp _a, _b |
| {_a: _b}     |     | {}         |
| jmp exit     |     | jne branch |
| {_a: _b}     | <-- | {}         |
+--------------+     +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |  branch:   |
  |                  | {}         |
  |                  | mov _a, _b |
  |                  | {_a: _b}   |
  |                  | jmp exit   |
  |                  | {_a: _b}   |
  |                  +------------+
  |                    |
  |                    |
  |                    v
  |                  +------------+
  |                  |   exit:    |
  |                  | {_a: _b}   |
  |                  | ret        |
  +----------------> | {_a: _b}   |
                     +------------+

